MultiTouch Screen Done

--- a/Augmented Reality.html
+++ b/Augmented Reality.html
@@ -134,7 +134,7 @@
 											<li><a href="Web Development.html">Web Development</a></li>
 
 											<li><a href="Mobile App Development.html">Mobile App Development</a></li>
-											<li><a href="gallery_fullimage_fullwidth_4_column.html">Multitouch Surfaces</a></li>
+											<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 
 											<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											
@@ -266,7 +266,7 @@
 									<li><a href="Web Development.html">Web Development</a></li>
 
 									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
-									<li><a href="gallery_grid_3_column.html">Multitouch Surfaces</a></li>
+									<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
@@ -923,7 +923,7 @@
 										</span>
 									</div>
 									<h3 class="item_title">
-										<a href="#!">Multitouch Surfaces</a>
+										<a href="Multitouch Surfaces.html">Multitouch Surfaces</a>
 									</h3>
 									<p class="mb-0">
 										The changing technology scenarios, on-demand customer requirements and sharp competition have taken interactive surface development to new heights.
@@ -1609,7 +1609,7 @@
 									<h3 class="widget_title mb-50">Services</h3>
 									<ul class="clearfix">
 										<li><a href="Web Development.html">Web Development</a></li>
-										<li><a href="home_payment.html">Multitouch Surfaces</a></li>
+										<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 										<li><a href="home_project_management.html">3D Projection Mapping</a></li>
 									</ul>
 								</div>
