--- a/Mobile App Development.html
+++ b/Mobile App Development.html
@@ -157,8 +157,8 @@
 							<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 							<li><a href="Web Development.html">Web Development</a></li>
 	  
-							<li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
-							<li><a href="gallery_fullimage_fullwidth_4_column.html">Multitouch Surfaces</a></li>
+							<li><a href="Mobile App Development.html">Mobile App Development</a></li>
+							<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 	  
 							<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 							
@@ -284,7 +284,7 @@
 									<li><a href="Web Development.html">Web Development</a></li>
 
 									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
-									<li><a href="gallery_grid_3_column.html">Multitouch Surfaces</a></li>
+									<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
@@ -356,21 +356,7 @@
                     data-aos="fade-up"
                     data-aos-delay="300"
                   >
-                    <ul class="clearfix">
-                      <li>
-                        <a
-                          href="sign_up.html"
-                          class="btn btn_border border_white"
-                          >Get Started</a
-                        >
-                      </li>
-                      <li>
-                        <a href="service_1.html" class="btn_text"
-                          >Find out more
-                          <i class="fal fa-long-arrow-right ml-1"></i
-                        ></a>
-                      </li>
-                    </ul>
+                   
                   </div>
                 </div>
               </div>
@@ -1077,7 +1063,7 @@
                 <h3 class="widget_title mb-50">Services</h3>
                 <ul class="clearfix">
                   <li><a href="Web Development.html">Web Development</a></li>
-                  <li><a href="home_payment.html">Multitouch Surfaces</a></li>
+                  <li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
                   <li><a href="home_project_management.html">3D Projection Mapping</a></li>
                 </ul>
               </div>
