Video Done in Multitouch

--- a/Web Development.html
+++ b/Web Development.html
@@ -1121,7 +1121,7 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
               <div class="copyright_text">
                 <p class="mb-0">
-                  Copyright © 2020 Desing by <a href="" class="author_link">Nand & Mann</a>
+                  Copyright © 2020 Desing by <a href="https://www.instagram.com/nand20_/" class="author_link" target= _blank>Nand</a> & <a href="https://www.instagram.com/manndave/" class="author_link" target= _blank>  Mann</a>
                 </p>
               </div>
             </div>
