--- a/Multitouch Surfaces.html
+++ b/Multitouch Surfaces.html
@@ -428,7 +428,7 @@
                     <div class="phone_image">
                       <div class="layer" data-depth="0.2">
                         <img
-                          src="assets/images/multitouch screen/2.png"
+                          src="assets/images/multitouch screen/left.png"
                           alt="image_not_found"
                           data-aos="fade-up"
                           data-aos-delay="100"
@@ -439,7 +439,7 @@
                       <div class="layer" data-depth="0.4">
                         <div data-aos="fade-up" data-aos-delay="300">
                           <img
-                            src="assets/images/multitouch screen/10.png"
+                            src="assets/images/multitouch screen/right.png"
                             alt="image_not_found"
                             data-parallax='{"y" : 60}'
                           />
@@ -549,7 +549,7 @@
                     <div class="phone_image">
                       <div class="layer" data-depth="0.2">
                         <img
-                          src="assets/images/multitouch screen/Multi Touch Surfaces.jpg"
+                          src="assets/images/multitouch screen/single.png"
                           alt="image_not_found"
                           data-aos="fade-up"
                           data-aos-delay="100"
@@ -559,11 +559,11 @@
                     <div class="chat_image">
                       <div class="layer" data-depth="0.4">
                         <div data-aos="fade-up" data-aos-delay="300">
-                          <img
-                            src="assets/images/multitouch screen/Multi.jpg"
+                          <!-- <img
+                            src="assets/images/multitouch screen/single.png"
                             alt="image_not_found"
                             data-parallax='{"y" : 60}'
-                          />
+                          /> -->
                         </div>
                       </div>
                     </div>
