--- a/Multitouch Surfaces.html
+++ b/Multitouch Surfaces.html
@@ -425,21 +425,23 @@
               >
                 <div class="col-lg-6 col-md-7 col-sm-9">
                   <div class="feature_image_4 scene_1">
-                    <div class="phone_image">
-                      <div class="layer" data-depth="0.2">
-                        <img
-                          src="assets/images/multitouch screen/left.png"
-                          alt="image_not_found"
-                          data-aos="fade-up"
-                          data-aos-delay="100"
-                        />
+                    <div class="multi_image">
+                      <div class="layer" data-depth="0.4">
+                        <div data-aos="fade-up" data-aos-delay="300">
+                          <img
+                            src="assets/images/multitouch screen/middle.png"
+                            alt="image_not_found"
+                            data-parallax='{"y" : 60}'
+                          />
+                        </div>
                       </div>
                     </div>
-                    <div class="chat_image">
+                    <div class="multi_image">
                       <div class="layer" data-depth="0.4">
                         <div data-aos="fade-up" data-aos-delay="300">
                           <img
                             src="assets/images/multitouch screen/right.png"
+                            src="assets/images/multitouch screen/left.png"
                             alt="image_not_found"
                             data-parallax='{"y" : 60}'
                           />
