--- a/Multitouch Surfaces.html
+++ b/Multitouch Surfaces.html
@@ -664,7 +664,7 @@
 								<div class="col-lg-9 col-md-9">
 									<div class="banner_image" data-aos="fade-up" data-aos-delay="300">
 										<img src="assets/images/multitouch screen/Multi.jpg" alt="image_not_found">
-										<a class="popup_video" href="https://www.youtube.com/watch?v=C4rWlaI_4hM"><i class="icon-play"></i></a>
+										<a class="popup_video" href="https://www.youtube.com/watch?v=B3U7x-iCaZw"><i class="icon-play"></i></a>
 									</div>
 								</div>
 							</div>
@@ -785,7 +785,7 @@
                       </div>
                     </div>
                     <p class="mb-0">
-                      ust to say we are really impressed with the way you have sorted things for us today and the internet seems superfast compared with how it has been. Thank you.
+                      Just to say we are really impressed with the way you have sorted things for us today and the internet seems superfast compared with how it has been. Thank you.
                     </p>
                   </div>
                 </div>
