3D Projection Mapping Done

--- a/Multitouch Surfaces.html
+++ b/Multitouch Surfaces.html
@@ -160,7 +160,7 @@
 							<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 							<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 	  
-							<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
+							<li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
 							
 							<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 							<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
@@ -285,7 +285,7 @@
 
 									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 									<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
-									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
+									<li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Version Update</a></li>
@@ -551,7 +551,7 @@
                     <div class="phone_image">
                       <div class="layer" data-depth="0.2">
                         <img
-                          src="assets/images/multitouch screen/touch-interactive-led-dance-floor-tile-wedding-light.jpg"
+                          src="assets/images/multitouch screen/37873723_2267617899944984_2127230046815911936_n.jpg"
                           alt="image_not_found"
                           data-aos="fade-up"
                           data-aos-delay="100"
@@ -969,7 +969,7 @@
                 <ul class="clearfix">
                   <li><a href="Web Development.html">Web Development</a></li>
                   <li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
-                  <li><a href="home_project_management.html">3D Projection Mapping</a></li>
+                  <li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
                 </ul>
               </div>
             </div>
