--- a/Virtual Reality.html
+++ b/Virtual Reality.html
@@ -136,7 +136,7 @@
 											<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 											<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
 
-											<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
+											<li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
 											
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
@@ -267,7 +267,7 @@
 
 									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 									<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
-									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
+									<li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Version Update</a></li>
@@ -953,7 +953,7 @@
 										</span>
 									</div>
 									<h3 class="item_title">
-										<a href="#!">3D Projection Mapping</a>
+										<a href="3D Projection Mapping.html">3D Projection Mapping</a>
 									</h3>
 									<p class="mb-0">
 										3D Projection mapping,video mapping and spatial augmented reality, is a projection technique used to turn objects,irregularly shaped, into a display surface for video projection. 
@@ -1613,7 +1613,7 @@
 									<ul class="clearfix">
 										<li><a href="Web Development.html">Web Development</a></li>
 										<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
-										<li><a href="home_project_management.html">3D Projection Mapping</a></li>
+										<li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
 									</ul>
 								</div>
 							</div>
