--- a/Web Development.html
+++ b/Web Development.html
@@ -158,7 +158,7 @@
                         <li><a href="Mobile App Development.html">Mobile App Development</a></li>
                         <li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
   
-                        <li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
+                        <li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
                         
                         <li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
                         <li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
@@ -283,7 +283,7 @@
 
 									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 									<li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
-									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
+									<li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Indoor Navigation</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Version Update</a></li>
@@ -1087,7 +1087,7 @@
                 <ul class="clearfix">
                   <li><a href="Web Development.html">Web Development</a></li>
                   <li><a href="Multitouch Surfaces.html">Multitouch Surfaces</a></li>
-                  <li><a href="home_project_management.html">3D Projection Mapping</a></li>
+                  <li><a href="3D Projection Mapping.html">3D Projection Mapping</a></li>
                 </ul>
               </div>
             </div>
