--- a/3D Projection Mapping.html
+++ b/3D Projection Mapping.html
@@ -328,7 +328,7 @@
 									<div class="phone_image">
 										<div class="layer" data-depth="0.3">
 											<div data-aos="fade-up" data-aos-delay="100">
-												<img src="assets/images/3D Projection Mapping/India-2.png" alt="image_not_found" data-parallax='{"y" : 60}'>
+												<img src="assets/images/3D Projection Mapping/14926.png" alt="image_not_found" data-parallax='{"y" : 60}'>
 											</div>
 										</div>
 									</div>
