--- a/3D Projection Mapping.html
+++ b/3D Projection Mapping.html
@@ -318,12 +318,12 @@
 
 				<!-- banner_section - start
 				================================================== -->
-				<section id="banner_section" class="banner_section payment_banner bg_gradient_blue text-white d-flex align-items-center deco_wrap clearfix">
+				<section id="banner_section" class="banner_section payment_banner bg_gradient_blue text-white  align-items-center deco_wrap clearfix">
 
 					<div class="container">
 						<div class="row justify-content-lg-between justify-content-md-center">
 
-							<div class="col-lg-4 col-md-6 order-last">
+							<div class="col-lg-6 col-md-5 col-sm-6 col-xs-4 order-last">
 								<div class="banner_image scene">
 									<div class="phone_image">
 										<div class="layer" data-depth="0.3">
@@ -375,7 +375,7 @@
 								</div>
 							</div>
 
-							<div class="col-lg-6 col-md-7">
+							<div class="col-lg-6 col-md-5 col-sm-6 col-xs-3">
 								<div class="banner_content">
 									<h1 class="title_text mb-30 text_effect_wrap">
 										<span class="text_effect text_effect_left">3D Projection</span>
