Indoor Navigation Done

--- a/Indoor Navigation.html
+++ b/Indoor Navigation.html
@@ -394,7 +394,7 @@
 								<div class="service_boxed_1">
 									<div class="icon_wrap">
 										<div class="item_icon bg_gradient_blue">
-											<i class="icon-graph"></i>
+											<img src="assets/images/icons/company.png">
 										</div>
 										<span class="icon_deco icon_deco_1">
 											<img src="assets/images/shapes/shape_3.png" alt="shape_not_found">
@@ -422,7 +422,7 @@
 								<div class="service_boxed_1">
 									<div class="icon_wrap">
 										<div class="item_icon bg_gradient_green">
-											<i class="icon-marketing"></i>
+											<img src="assets/images/icons/wifi-router.png">
 										</div>
 										<span class="icon_deco icon_deco_1">
 											<img src="assets/images/shapes/shape_3.png" alt="shape_not_found">
@@ -450,7 +450,7 @@
 								<div class="service_boxed_1">
 									<div class="icon_wrap">
 										<div class="item_icon bg_gradient_orange">
-											<i class="icon-paper-plane"></i>
+											<img src="assets/images/icons/eye-tracking.png">
 										</div>
 										<span class="icon_deco icon_deco_1">
 											<img src="assets/images/shapes/shape_3.png" alt="shape_not_found">
@@ -535,7 +535,7 @@
 
 										<div class="child_feature_2 clearfix" data-aos="fade-up" data-aos-delay="300">
 											<div class="item_icon icon_purple">
-												<i class="icon-ring"></i>
+												<img src="assets/images/icons/pin.png">
 											</div>
 											<div class="item_content">
 												<h3 class="item_title">Search in Map</h3>
@@ -547,7 +547,7 @@
 
 										<div class="child_feature_2 clearfix" data-aos="fade-up" data-aos-delay="400">
 											<div class="item_icon icon_yellow">
-												<i class="icon-verified-avatar"></i>
+												<img src="assets/images/icons/smartphone.png">
 											</div>
 											<div class="item_content">
 												<h3 class="item_title">Get Directions</h3>
@@ -633,7 +633,31 @@
 				</section>
 				<!-- feature_section - end
 				================================================== -->
-
+<br>
+<br>
+<br>
+<br>
+		<div align="center">
+			<div class="section_title text-center mb-80 c_slide_in">
+				<h3 class="sub_title mb-15 c_slide_in_wrap1">
+				  <span class="c_slide_in_wrap2">
+					<span class="c_slide_in_wrap3">
+					  Apps Screen
+					</span>
+				  </span>
+				</h3>
+				<h2 class="title_text mb-0 c_slide_in_wrap1">
+				  <span class="c_slide_in_wrap2">
+					<span class="c_slide_in_wrap3">
+					  Awesome App Screens
+					</span>
+				  </span>
+				</h2>
+			  </div>
+		<img src="assets/images/Indoor Navigation/direction.png">
+		</div>
+		<br>
+<br>
 
 				 <!-- testimonial_section - start
 				================================================== -->
