--- a/About us.html
+++ b/About us.html
@@ -389,7 +389,7 @@
 							<div class="row align-items-center justify-content-lg-between justify-content-md-between justify-content-sm-center">
 								<div class="col-lg-5 col-md-5 col-sm-7 order-last">
 									<div class="item_image">
-										<img src="assets/images/process/img_3.jpg" alt="image_not_found">
+										<img src="assets/images/process/img_3.png" alt="image_not_found">
 									</div>
 								</div>
 
