--- a/Mobile App Development.html
+++ b/Mobile App Development.html
@@ -1133,8 +1133,8 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
               <div class="footer_menu ul_li_right">
                 <ul class="clearfix">
-                  <li><a href="#!">Terms of Use</a></li>
-                  <li><a href="#!">Privacy Policy</a></li>
+                  <!-- <li><a href="#!">Terms of Use</a></li> -->
+                  <li><a href="Privacy Policy.html">Privacy Policy</a></li>
                 </ul>
               </div>
             </div>
