--- a/Version Update.html
+++ b/Version Update.html
@@ -396,8 +396,8 @@
 							<div class="col-lg-6 col-md-5 col-sm-6 col-xs-3">
 								<div class="banner_content">
 									<h1 class="title_text mb-30 text_effect_wrap">
-										<span class="text_effect text_effect_left">Version Update</span><br>
-										<!-- <span class="text_effect text_effect_left">Software release data - One Place One Format</span> -->
+										<span class="text_effect text_effect_left">Version Update</span>
+										
 									</h1>
 									<p class="mb-50" data-aos="fade-up" data-aos-delay="200">
 										Software release data-One Place One Format
@@ -949,9 +949,9 @@
               <div class="widget useful_links ul_li_block">
                 <h3 class="widget_title mb-50">Services</h3>
                 <ul class="clearfix">
-                  <li><a href="about.html">Game Development</a></li>
-                  <li><a href="service_1.html">Indoor Navigation</a></li>
-                  <li><a href="case_study.html">Version Update</a></li>
+                  <li><a href="Game Development.html">Game Development</a></li>
+                  <li><a href="Indoor Navigation.html">Indoor Navigation</a></li>
+                  <li><a href="Version Update.html">Version Update</a></li>
                 </ul>
               </div>
             </div>
