--- a/About us.html
+++ b/About us.html
@@ -332,7 +332,7 @@
 						<div class="col-lg-6 col-md-5 col-sm-6 col-xs-3">
 							<div class="banner_content">
 								<h1 class="title_text mb-30 text_effect_wrap">
-									<span class="text_effect text_effect_left">About Us - Hash Media</span>
+									<span class="text_effect text_effect_left">About Us</span>
 									
 									
 								</h1>
