--- a/Version Update.html
+++ b/Version Update.html
@@ -258,7 +258,7 @@
 <!--                                        </div>-->
 <!--                                    </div>-->
 <!--                                </div>-->
-                                <div class="child_image_2">
+                                <!-- <div class="child_image_2">
                                     <div class="layer" data-depth="0.4">
                                         <div data-aos="fade-up" data-aos-delay="700">
                                             <img
@@ -267,7 +267,7 @@
                                             />
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
