--- a/Version Update.html
+++ b/Version Update.html
@@ -228,7 +228,7 @@
 
             ================================================== -->
         <!-- particles -->
-        <div id="particles-js">
+        <div id="particles-js" style="position: relative;">
             <section
                     id="banner_section"
                     class="banner_section software_banner deco_wrap d-flex align-items-center text-white clearfix"
