- Version Update Version Particle in Floating Numbers

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<title>Hash Media</title>
-		<link rel="shortcut icon" href="assets/images/logo/Hash Media.ico">
+		<link rel="shortcut icon" href="assets/images/logo/Hash Media.png">
 
 		<!-- css include -->
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -578,11 +578,11 @@
 
 
 
-							<div class="col-lg-8">
+							<div class="col-lg-10">
 								<div class="banner_content">
 									<h1 class="title_text mb-30 text_effect_wrap">
-										<span class="text_effect text_effect_bottom">We ensure and transform</span>
-										<span class="text_effect text_effect_bottom">business growing</span>
+										<span class="text_effect text_effect_bottom">We energise and transform businesses</span>
+										<span class="text_effect text_effect_bottom">using latest technologies</span>
 									</h1>
 									<p class="mb-50" data-aos="fade-up" data-aos-delay="200">
 										Faff about only a quid blower I don't want no agro bleeding chim pot burke tosser cras nice one boot fanny for your business development.
