Home Page Content Updated & Telephonic Links Added

--- a/home.html
+++ b/home.html
@@ -360,7 +360,7 @@
 						</div>
 
 						<div class="col-lg-2 col-md-12">
-							<a href="contact.html" class="btn bg_default_brinjal float-right">Contact Us</a>
+							<a href="#newsletter_section" class="btn bg_default_brinjal float-right">Contact Us</a>
 						</div>
 						
 					</div>
@@ -585,7 +585,7 @@
 										<span class="text_effect text_effect_bottom">using latest technologies</span>
 									</h1>
 									<p class="mb-50" data-aos="fade-up" data-aos-delay="200">
-										Faff about only a quid blower I don't want no agro bleeding chim pot burke tosser cras nice one boot fanny for your business development.
+										Incepted in 2010, from there to now in these considerable years, we've gone through every obstacle and provided solution with sheer dedication.
 									</p>
 									<!-- <div class="btns_group ul_li_center"data-aos="fade-up" data-aos-delay="300">
 										<ul class="clearfix">
@@ -755,7 +755,7 @@
 
 				<!-- partner_section - start
 				================================================== -->
-				<section id="partner_section" class="partner_section text-center sec_ptb_120 deco_wrap pt-0 clearfix">
+				<section id="partner_section" class="partner_section text-center sec_ptb_60 deco_wrap pt-0 clearfix">
 					<div class="container">
 
 						<div class="section_title text-center mb-30 text_effect_wrap">
@@ -811,10 +811,10 @@
 				================================================== -->
 				<section class="service_section sec_ptb_120 pb-0 deco_wrap clearfix">
 					<div class="container">
-						<div class="section_title text-center mb-30 text_effect_wrap">
-							<!-- <h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">How it works</span></h3> -->
-							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Simple Process to Start</span></h2>
-						</div>
+<!--						<div class="section_title text-center mb-30 text_effect_wrap">-->
+<!--							&lt;!&ndash; <h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">How it works</span></h3> &ndash;&gt;-->
+<!--							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Simple Process to Start</span></h2>-->
+<!--						</div>-->
 						<div class="btn_wrap text-center" data-aos="fade-up" data-aos-delay="100">
 							<a href="#!" class="btn btn_border border_brinjal">Our Services</a>
 						</div>
@@ -841,8 +841,8 @@
 									<h3 class="item_title">
 										<a href="#!">Augmented Reality</a>
 									</h3>
-									<p class="mb-0">
-										Even in today’s connected world, one of the primary challenges of many businesses is to establish more creative connections and more meaningful interactions with customers. We build custom AR solutions. 
+									<p class="mb-0 text-justify">
+										Offering endless opportunities, Augmented Reality can be used almost anywhere, everywhere and in anything and everything. Just as a picture can speak a thousand words, so too can an AR experience increase brand/product/communication recall by over 50 percent!
 									</p>
 								</div>
 							</div>
@@ -869,7 +869,7 @@
 									<h3 class="item_title">
 										<a href="#!">Virtual Reality</a>
 									</h3>
-									<p class="mb-0">
+									<p class="mb-0 text-justify">
 										Virtual Reality is a fast-growing technology, and it is becoming highly accessible to both private people and businesses. VR has already become a powerful tool in gaming industry, and it is now transforming multiple industries.</p>
 								</div>
 							</div>
@@ -896,8 +896,8 @@
 									<h3 class="item_title">
 										<a href="Web Development.html">Web Development</a>
 									</h3>
-									<p class="mb-0">
-										It is doubtlessly accepted that in modern era the major success of any organization is depended on the effectiveness of its way of communication with clients and customers.
+									<p class="mb-0 text-justify">
+										Speed, innovation and flawless performance. If these three things rank high on your priorities for web development projects, then Hash Media is a perfect fit. For close to a decade we have been mastering the art of creating cutting-edge web portals.
 									</p>
 								</div>
 							</div>
@@ -924,8 +924,8 @@
 									<h3 class="item_title">
 										<a href="Mobile App Development.html">Mobile App Development</a>
 									</h3>
-									<p class="mb-0">
-										Android has overtaken iPhone and Android application development market is growing at a rapid pace. If you are looking for outstanding apps for yourself or your clients, then come to us.</p>
+									<p class="mb-0 text-justify">
+										Hash Media has a dynamic team of mobile app developers who can transform your ideas into reality, rendering outstanding solutions in the form of apps.
 								</div>
 							</div>
 
@@ -951,8 +951,8 @@
 									<h3 class="item_title">
 										<a href="Multitouch Surfaces.html">Multitouch Surfaces</a>
 									</h3>
-									<p class="mb-0">
-										The changing technology scenarios, on-demand customer requirements and sharp competition have taken interactive surface development to new heights.
+									<p class="mb-0 text-justify">
+										A Multi Touch Surface is essentially a giant touch screen that can process multiple touches at once. And in our case, a virtually unlimited amount of touches. In a public place, a Multi-Touch surface can be a real attention grabber.
 									</p>
 								</div>
 							</div>
@@ -979,8 +979,8 @@
 									<h3 class="item_title">
 										<a href="3D Projection Mapping.html">3D Projection Mapping</a>
 									</h3>
-									<p class="mb-0">
-										3D Projection mapping,video mapping and spatial augmented reality, is a projection technique used to turn objects,irregularly shaped, into a display surface for video projection. 
+									<p class="mb-0 text-justify">
+										3D Projection mapping, video mapping and spatial augmented reality, is a projection technique used to turn objects,irregularly shaped, into a display surface for video projection. Contact Us for best 3D Mapping Services.
 									</p>
 								</div>
 							</div>
@@ -1008,7 +1008,7 @@
 									<h3 class="item_title">
 										<a href="Game Development.html">Game Development</a>
 									</h3>
-									<p class="mb-0">
+									<p class="mb-0 text-justify">
 										Hash Media believes in developing games with attractive UI that highly engage your targeted customers. We develop games for Windows ans two of the most widely used mobile platforms: Android OS and iOS.
 									</p>
 								</div>
@@ -1038,8 +1038,8 @@
 									<h3 class="item_title">
 										<a href="Indoor Navigation.html">Indoor Navigation</a>
 									</h3>
-									<p class="mb-0">
-										Indoor navigation deals with navigation within buildings.Technologies are used here when automatic positioning is desired. Wi-Fi or Bluetooth are used to create a so-called "indoor GPS".
+									<p class="mb-0 text-justify">
+										Indoor navigation deals with navigation within buildings. Technologies are used here when automatic positioning is desired. Wi-Fi or Bluetooth are used to create a so-called "indoor GPS".
 									</p>
 								</div>
 							</div>
@@ -1065,7 +1065,7 @@
 									<h3 class="item_title">
 										<a href="Version Update.html">Version Update</a>
 									</h3>
-									<p class="mb-0">
+									<p class="mb-0 text-justify">
 										One Place One Format
 										A one of a kind service that simplifies the release tracking process that eliminates complexity, reduces risk of exposure to vulnerabilities there by optimizing costs for customers.
 									</p>
@@ -1143,10 +1143,10 @@
 							<div class="col-lg-8 col-md-8 col-sm-10">
 								<div class="section_title text-white text_effect_wrap">
 									<h2 class="title_text mb-30">
-										<span class="text_effect text_effect_bottom">Check your <strong class="text_orange">Website’s SEO</strong></span>
+										<span class="text_effect text_effect_bottom">Subscribe For Our <strong class="text_orange">Newsletter</strong></span>
 									</h2>
 									<p class="mb-0" data-aos="fade-up" data-aos-delay="100">
-										The full monty burke posh excuse my French Richard cheeky bobby spiffing crikey Why more by the way to gormless, pear shaped. All the lorem ipsum
+										A monthly newsletter with all weird and wonderful tech news.
 									</p>
 								</div>
 							</div>
@@ -1156,7 +1156,7 @@
 							<ul class="clearfix">
 								<li>
 									<div class="form_item">
-										<input type="text" name="weburl" placeholder="Web URL">
+										<input type="text" name="name" placeholder="Name">
 									</div>
 								</li>
 								<li>
@@ -1165,7 +1165,7 @@
 									</div>
 								</li>
 								<li>
-									<button type="submit" class="btn bg_gradient_orange border-0">Search</button>
+									<button type="submit" class="btn bg_gradient_orange border-0">Register</button>
 								</li>
 							</ul>
 						</div>
@@ -1538,14 +1538,6 @@
 									<div class="place_name">India</div>
 									<div class="round"><div class="dot"></div></div>
 								</li>
-								<!-- <li data-aos="fade-up" data-aos-delay="100">
-									<div class="place_name">Japan</div>
-									<div class="round"><div class="dot"></div></div>
-								</li> -->
-								<!-- <li data-aos="fade-up" data-aos-delay="500">
-									<div class="place_name">Brazil</div>
-									<div class="round"><div class="dot"></div></div>
-								</li> -->
 								<li data-aos="fade-up" data-aos-delay="400">
 									<div class="place_name">Africa</div>
 									<div class="round"><div class="dot"></div></div>
@@ -1770,7 +1762,7 @@
 							<h6 align="left">E-Mail: <a href="mailto:harshit@hashmedia.in">harshit@hashmedia.in </a></h6>
 						 </li>
 						 <li>
-							<h6 align="left">Call: <a href="#">(+91) 987-952-7446</a></h6>
+							<h6 align="left">Call: <a href="tel:(+91) 987-952-7446">(+91) 987-952-7446</a></h6>
 						  </li>
 						 <br>
 						  <li>
@@ -1780,7 +1772,7 @@
 						   <h6 align="left">E-Mail: <a href="mailto:hardie@hashmedia.in">hardie@hashmedia.in </a></h6>
 						</li>
 						<li>
-						   <h6 align="left">Call: <a href="#">(+91) 997-896-3183</a></h6>
+						   <h6 align="left">Call: <a href="tel:(+91) 997-896-3183">(+91) 997-896-3183</a></h6>
 						 </li>
 					  </ul>
 						</div><br><br>
@@ -1824,7 +1816,7 @@
 									<div class="contact_info ul_li_block mb-30">
 										<ul class="clearfix">
 											<li>Email: <a href="mailto:harshit@hashmedia.in">harshit@hashmedia.in </a></li>
-											<li>Phone: <a href="#!">(+91) 987-952-7446</a></li>
+											<li>Phone: <a href="tel:(+91) 987-952-7446">(+91) 987-952-7446</a></li>
 										</ul>
 									</div>
 									<div class="form_item mb-0">
@@ -1886,7 +1878,7 @@
 							<div class="col-lg-4 col-md-4 col-sm-12">
 								<div class="copyright_text">
 									<p class="mb-0">
-										CCopyright © 2020 Desing by <a href="https://www.instagram.com/nand20_/" class="author_link" target= _blank>Nand</a> & <a href="https://www.instagram.com/manndave/" class="author_link" target= _blank>  Mann</a>
+										Copyright © 2020 Desing by <a href="https://www.instagram.com/nand20_/" class="author_link" target= _blank>Nand</a> & <a href="https://www.instagram.com/manndave/" class="author_link" target= _blank>  Mann</a>
 									</p>
 								</div>
 							</div>
